--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,1 +1,11 @@
+// Settings
+@import './settings/vars';
+
+// Base
+@import './base/core';
+@import './base/typography';
+
+// Components
 @import './components/canvas';
+@import './components/layout';
+@import './components/sidebar';
