[dijkstra]: got basic implementation of dijkstra added

--- a/src/scss/components/_canvas.scss
+++ b/src/scss/components/_canvas.scss
@@ -28,6 +28,13 @@
             background-repeat: no-repeat;
             background-position: center;
         }
+
+        &.visited {
+            &::after {
+                background-color: blue;
+            }
+        }
+
         &--0 { // blank
             &:hover {
                 &::after {
