--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -60,6 +60,9 @@
                         }
                     }
                 }
+                &__start {
+                    width: 100%;
+                }
             }
         }
     }
