--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 // Base
 @import './base/core';
 @import './base/typography';
+@import './base/inputs';
 
 // Components
 @import './components/canvas';
