[functionality]: added grid size scaller

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,9 @@
 @import './base/typography';
 @import './base/inputs';
 
+// Libs
+@import './libraries/rangeslider.scss';
+
 // Components
 @import './components/canvas';
 @import './components/layout';
