--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -6,7 +6,7 @@
     top: 20px;
     width: 350px;
     overflow-y: auto;
-    border-radius: $border_radius;
+    border-radius: $section_radius;
     &__inner {
         padding: 10px 20px;
         &__section {
