--- a/src/scss/settings/_vars.scss
+++ b/src/scss/settings/_vars.scss
@@ -5,7 +5,8 @@ $border_colour: #cbd0d3;
 $font_title: rgb(27, 27, 27);
 $font_body: rgb(39, 39, 39);
 
-$border_radius: 20px;
+$border_radius: 5px;
+$section_radius: 20px;
 
 
 
