--- a/src/scss/base/_inputs.scss
+++ b/src/scss/base/_inputs.scss
@@ -2,8 +2,34 @@
 select, 
 input,
 textarea {
-
     width: 100%;
     height: 40px;
     margin-bottom: 10px;
+    padding: 0 10px;
+    border-radius: $border_radius;
+    border: 1px solid #303131;
+    background-color: white;
+    font-size: 16px;
+    appearance: none;
+}
+
+.select-wrapper {
+    position: relative;
+    margin-bottom: 10px;
+    &__icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 10px;
+        svg {
+            height: 16px;
+        }
+    }
+    select {
+        margin-bottom: 0;
+    }
 }
