--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import './base/core';
 @import './base/typography';
 @import './base/inputs';
+@import './base/buttons';
 
 // Libs
 @import './libraries/rangeslider.scss';
